<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/ll"
            android:layout_marginBottom="8dp">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true" />
            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <GridLayout
            android:id="@+id/layout3"
            android:layout_below="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="10"
            android:columnCount="2"
            android:padding="8dp">
            <TextView
                android:text="@string/name_"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/nameTV"
                android:text="name"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:layout_marginEnd="110dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"/>

            <TextView
                android:text="@string/type_"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/typeTV"
                android:text="type"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:layout_marginEnd="110dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"/>

            <TextView
                android:text="@string/code_"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx1"
                android:text="ahmedddddddddddddddddddddddddddddddd"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:layout_marginEnd="110dp"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"/>
            <TextView
                android:text="@string/about_"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx2"
                android:text="apartment"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/area"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx3"
                android:text="200 m2"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/rooms"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx5"
                android:text="6"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx6"
                android:text="1500 EG"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/bathroom_"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bathroomTV"
                android:text="bathroomTV"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:layout_marginEnd="110dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"/>
            <TextView
                android:text="@string/grage"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx7"
                android:text="None"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/city"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx8"
                android:text="maka el mokrama"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/district"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx9"
                android:text="andalos"
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/address"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tx10"
                android:text="3 amir fahd "
                android:textColor="#BDBDBD"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>
        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/map"
            android:layout_below="@+id/layout3"
            android:layout_marginBottom="10dp"

            />
    </RelativeLayout>
</ScrollView>