<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp"

                    />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/updatepf"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/designbutton"
                    android:text="@string/update_profile"
                    android:textColor="@color/white" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:elevation="2dp"
            app:layout_anchor="@id/cardView"
            app:layout_anchorGravity="center|top" />

        <ProgressBar
            android:id="@+id/progerss3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_anchor="@id/cardView"
            app:layout_anchorGravity="center" />
    </android.support.design.widget.CoordinatorLayout>

</ScrollView>