<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <include layout="@layout/progress_bar" />

        <ImageView
            android:id="@+id/image_register"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/image_register"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edtxt_bg"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/name_register"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edtxt_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor"

            />


        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/email_register"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edtxt_bg"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:paddingEnd="8dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                tools:ignore="LabelFor" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lin2"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edtxt_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edtxt_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="locale"

                />

            <ImageButton
                android:id="@+id/btn_pass_visibility"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_visibility_black_24dp"
                tools:ignore="ContentDescription,VectorDrawableCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/lin1"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edtxt_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_Register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edtxt_bg"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="locale" />

            <ImageButton
                android:id="@+id/btn_pass_visibility1"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_visibility_black_24dp"
                tools:ignore="ContentDescription,VectorDrawableCompat" />
        </LinearLayout>

        <Button
            android:id="@+id/login_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/designbutton2"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/dim_8dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/login_register"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dim_8dp"
            android:layout_marginTop="@dimen/dim_8dp">

            <Button
                android:id="@+id/signup_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edtxt_bg"
                android:text="@string/sing_up"
                android:textColor="@color/white"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp" />

            <Button
                android:id="@+id/signin_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/designbuttonwhite"
                android:text="@string/sing_in"
                android:textColor="@color/colorPrimary"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>